fixed navbar shifting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,11 +17,20 @@
     padding-bottom:0;
 }
 
+.navbar {
+    width:960px;
+    margin: auto;
+    height: 100px;
+}
+
 h1 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #ffffff;
     margin-left:480px;
     width:960px;
+    position:relative;
+    right:480px;
+    top:80px;
 }
 
 h1 span {
@@ -29,7 +38,6 @@ h1 span {
     padding:20px;
     position:absolute;
     bottom:0;
-    float:left;
 }
 
 h2 {
@@ -68,11 +76,12 @@ p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 22px;
     color:#4aaaa5;
-    margin-right:485px;
-    float:right;
-    top:20px;
     position:relative;
+    top:25px;
+    right:5px;
+
 }
+
 
 a {
     text-decoration: none;
